--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -12,17 +12,15 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView"
         app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
         android:layout_marginTop="24dp"
         app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp" />
 
-    <android.support.design.widget.TextInputLayout
-
-    <EditText
+    <android.support.v7.widget.AppCompatEditText
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
@@ -30,15 +28,15 @@
         android:layout_width="0dp"
         android:hint="Email"
         app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         android:layout_marginTop="8dp"
         app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp" />
 
-    <EditText
+    <android.support.v7.widget.AppCompatEditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
@@ -46,13 +44,13 @@
         android:id="@+id/passwordInput"
         android:hint="Password"
         app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintTop_toBottomOf="@+id/emailInput"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp" />
 
     <Button
         android:text="Sign In"
@@ -61,13 +59,13 @@
         android:id="@+id/emailAuth"
         style="@style/Widget.AppCompat.Button.Colored"
         app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintTop_toBottomOf="@+id/passwordInput"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -78,7 +76,7 @@
         android:id="@+id/passwordRecoveryButton"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         app:layout_constraintTop_toBottomOf="@+id/passwordInput"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintRight_toLeftOf="@+id/emailAuth"
         android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp" />
@@ -90,13 +88,17 @@
         android:id="@+id/googleAuth"
         style="@style/Widget.AppCompat.Button.Borderless"
         app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/passwordRecoveryButton"
+        android:layout_marginTop="8dp"
         app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toTopOf="@+id/facebookAuth"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:text="Sign In With Facebook"
@@ -105,11 +107,11 @@
         android:id="@+id/facebookAuth"
         style="@style/Widget.AppCompat.Button.Borderless"
         app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toTopOf="@+id/twitterAuth"
         android:layout_marginBottom="8dp" />
 
@@ -120,11 +122,11 @@
         android:id="@+id/twitterAuth"
         style="@style/Widget.AppCompat.Button.Borderless"
         app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toTopOf="@+id/githubAuth"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.37" />
@@ -136,11 +138,11 @@
         android:id="@+id/githubAuth"
         style="@style/Widget.AppCompat.Button.Borderless"
         app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toTopOf="@+id/accountCreate"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.75" />
@@ -152,13 +154,13 @@
         android:id="@+id/accountCreate"
         style="@style/Widget.AppCompat.Button.Borderless"
         app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="15dp"
         app:layout_constraintHorizontal_bias="0.62" />
 
 </android.support.constraint.ConstraintLayout>
